force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/ZP_Company_Onboarding_Funnel__c.object-meta.xml
<CustomObject>
    <label>ZP Company Onboarding Funnel</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ZP Company Onboarding Funnel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZP Company Onboarding Funnel</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>