force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/add_addresses_completed_at__c.field-meta.xml
<CustomField>
    <fullName>add_addresses_completed_at__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Add addresses completed at</label>
    <type>DateTime</type>
</CustomField>