force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/add_bank_info_completed_at__c.field-meta.xml
<CustomField>
    <fullName>add_bank_info_completed_at__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>add bank info completed at</label>
    <type>DateTime</type>
</CustomField>