force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/add_contractors_started_at__c.field-meta.xml
<CustomField>
    <fullName>add_contractors_started_at__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>add contractors started at</label>
    <type>DateTime</type>
</CustomField>