force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/Add_employees_completed_at__c.field-meta.xml
<CustomField>
    <fullName>Add_employees_completed_at__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Add employees completed at</label>
    <type>DateTime</type>
</CustomField>