force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/Add_Signatory_Completed__c.field-meta.xml
<CustomField>
    <fullName>Add_Signatory_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Signatory Completed</label>
    <type>Checkbox</type>
</CustomField>