force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/add_signatory_started_at__c.field-meta.xml
<CustomField>
    <fullName>add_signatory_started_at__c</fullName>
    <label>add signatory started at</label>
    <type>DateTime</type>
</CustomField>