force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/Already_hired_employees__c.field-meta.xml
<CustomField>
    <fullName>Already_hired_employees__c</fullName>
    <description>Populated with pre-onboarding survey data</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Already hired employees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>