force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/Company_Employee_Pay_Types__c.field-meta.xml
<CustomField>
    <fullName>Company_Employee_Pay_Types__c</fullName>
    <description>Populated with pre-onboarding survey data</description>
    <label>Company Employee Pay Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>