force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/create_user_account_completed_at__c.field-meta.xml
<CustomField>
    <fullName>create_user_account_completed_at__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>create_user_account_completed_at</label>
    <type>DateTime</type>
</CustomField>