force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/Current_payroll__c.field-meta.xml
<CustomField>
    <fullName>Current_payroll__c</fullName>
    <description>Populated with pre-onboarding survey data</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Current payroll</label>
    <length>255</length>
    <type>Text</type>
</CustomField>