force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/Federal_Tax_Setup_Completed__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_Setup_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Federal Tax Setup Completed</label>
    <type>Checkbox</type>
</CustomField>