force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/federal_tax_setup_completed_at__c.field-meta.xml
<CustomField>
    <fullName>federal_tax_setup_completed_at__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>federal tax setup completed at</label>
    <type>DateTime</type>
</CustomField>