force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/Has_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Has_Bank_Account__c</fullName>
    <description>Populated with pre-onboarding survey data</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Has Bank Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>