force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/historical_liabilities_started_at__c.field-meta.xml
<CustomField>
    <fullName>historical_liabilities_started_at__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>historical liabilities started at</label>
    <type>DateTime</type>
</CustomField>