force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <externalId>true</externalId>
    <label>Source Model ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>