force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/Is_Changed__c.field-meta.xml
<CustomField>
    <fullName>Is_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marked as true if update is valid.</description>
    <label>Is Changed</label>
    <type>Checkbox</type>
</CustomField>