force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/Payroll_Schedule_Completed__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Schedule_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payroll Schedule Completed</label>
    <type>Checkbox</type>
</CustomField>