force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/payroll_schedule_started_at__c.field-meta.xml
<CustomField>
    <fullName>payroll_schedule_started_at__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>payroll schedule started at</label>
    <type>DateTime</type>
</CustomField>