force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/Previous_Payroll_Provider__c.field-meta.xml
<CustomField>
    <fullName>Previous_Payroll_Provider__c</fullName>
    <description>Populated with pre-onboarding survey data</description>
    <label>Previous Payroll Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>