force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/Previous_Paystubs_Completed__c.field-meta.xml
<CustomField>
    <fullName>Previous_Paystubs_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previous Paystubs Completed</label>
    <type>Checkbox</type>
</CustomField>