force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/previous_paystubs_completed_at__c.field-meta.xml
<CustomField>
    <fullName>previous_paystubs_completed_at__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>previous paystubs completed at</label>
    <type>DateTime</type>
</CustomField>