force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/previous_paystubs_started_at__c.field-meta.xml
<CustomField>
    <fullName>previous_paystubs_started_at__c</fullName>
    <label>previous paystubs started at</label>
    <type>DateTime</type>
</CustomField>