force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/ran_payroll_at__c.field-meta.xml
<CustomField>
    <fullName>ran_payroll_at__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ran_payroll_at</label>
    <type>DateTime</type>
</CustomField>