force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/Registered_with_IRS__c.field-meta.xml
<CustomField>
    <fullName>Registered_with_IRS__c</fullName>
    <description>Populated with pre-onboarding survey data</description>
    <label>Registered with IRS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>