force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/setup_wc_started_at__c.field-meta.xml
<CustomField>
    <fullName>setup_wc_started_at__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>setup wc started at</label>
    <type>DateTime</type>
</CustomField>