force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/Sign__c.field-meta.xml
<CustomField>
    <fullName>Sign__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sign Up Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>