force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/Sign_All_Forms_Completed__c.field-meta.xml
<CustomField>
    <fullName>Sign_All_Forms_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sign All Forms Completed</label>
    <type>Checkbox</type>
</CustomField>