force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/Sign_all_forms_completed_at__c.field-meta.xml
<CustomField>
    <fullName>Sign_all_forms_completed_at__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sign all forms completed at</label>
    <type>DateTime</type>
</CustomField>