force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/sign_all_forms_started_at__c.field-meta.xml
<CustomField>
    <fullName>sign_all_forms_started_at__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>sign all forms started at</label>
    <type>DateTime</type>
</CustomField>