force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/State_setup_completed_at__c.field-meta.xml
<CustomField>
    <fullName>State_setup_completed_at__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State setup completed at</label>
    <type>DateTime</type>
</CustomField>