force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/state_setup_started_at__c.field-meta.xml
<CustomField>
    <fullName>state_setup_started_at__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>state setup started at</label>
    <type>DateTime</type>
</CustomField>