force-app/main/default/objects/ZP_Company_Onboarding_Funnel__c/fields/Verify_Bank_Info_Completed__c.field-meta.xml
<CustomField>
    <fullName>Verify_Bank_Info_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify Bank Info Completed</label>
    <type>Checkbox</type>
</CustomField>